16 April 2008: Wouter
	- requirements doc, updated clean query returns.

15 April 2008: Wouter
	- fixup default rc.d pidfile location to /usr/local/etc.
	- iana ports updated.
	- copyright updated in ldns-testpkts to keep same as in ldns.
	- fixup checkconf chroot tests a bit more, chdir must be inside
	  chroot dir.
	- documented 'gcc: unrecognized -KPIC option' errors on Solaris.
	- example.conf values changed to /usr/local/etc/unbound
	- DSA test work.
	- DSA signatures: unbound is compatible with both encodings found.
	  It will detect and convert when necessary.

14 April 2008: Wouter
	- got update for parseunbound.pl statistics script from Kai Storbeck.
	- tpkg tests for udp wait list.
	- documented 0x20 status.
	- fixup chroot and checkconf, it is much smarter now.
	- fixup DSA EVP signature decoding. Solution that Jelte found copied.
	- and check first sig byte for the encoding type.

11 April 2008: Wouter
	- random port selection out of the configged ports.
	- fixup threadsafety for libevent-1.4.3+ (event_base_get_method).
	- removed base_port.
	- created 256-port ephemeral space for the OS, 59802 available.
	- fixup consistency of port_if out array during heavy use.

10 April 2008: Wouter
	- --with-libevent works with latest libevent 1.4.99-trunk.
	- added log file statistics perl script to contrib.
	- automatic iana ports update from makefile. 60058 available.

9 April 2008: Wouter
	- configure can detect libev(from its build directory) when passed
	  --with-libevent=/home/wouter/libev-3.2
	  libev-3.2 is a little faster than libevent-1.4.3-stable (about 5%).
	- unused commpoints not listed in epoll list.
	- statistics-cumulative option so that the values are not reset.
	- config creates array of available ports, 61841 available,
	  it excludes <1024 and iana assigned numbers.
	  config statements to modify the available port numbers.

8 April 2008: Wouter
	- unbound tries to set the ulimit fds when started as server.